# mod-visible-npc

./: CMakeLists.txt  README.md
conf/: mod_visible_npc.conf.dist
src/: mod_visible_npc.cpp
